@@ -10,7 +10,7 @@ import org.junit.Before;
 import org.junit.Test;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Locale;
 import java.util.TimeZone;
 import java.util.logging.Level;
@@ -28,7 +28,6 @@ public class GitLastChangesTest {
     public static final String newLine = System.getProperty("line.separator");
 
     String gitRepoPath;
-
 
     @Before
     public void before() {
@@ -54,14 +53,13 @@ public class GitLastChangesTest {
 
     @Test
     public void shouldNotInitRepositoryWithNonExistingRepository() {
-        String repoPath = Paths.get("").toAbsolutePath().toString();
+        String repoPath = Path.of("").toAbsolutePath().toString();
         try {
             repository(repoPath);
         } catch (RuntimeException e) {
             assertEquals(String.format("No git repository found at %s.", repoPath), e.getMessage());
         }
     }
-
 
     @Test
     public void shouldGetLastChangesFromGitRepository() {
@@ -103,7 +101,6 @@ public class GitLastChangesTest {
                 "  * @return iterable which iteratively walks over this component and all of its descendants.").replaceAll("\r", ""));
     }
 
-
     @Test
     public void shouldGetLastChangesFromInitialCommitGitRepo() {
         String repositoryLocation = GitLastChangesTest.class.getResource("/git-initial-commit-repo").getFile();
@@ -143,12 +140,10 @@ public class GitLastChangesTest {
                     " "+newLine +
                     "     <name>admin-persistence</name>"+newLine +
                     "     <url>https://github.com/adminfaces/admin-persistence</url>"+newLine);
-            
+
         } catch (Exception e) {
             Logger.getLogger(getClass().getName()).log(Level.SEVERE, "", e);
             assertThat(e.getMessage()).isEqualTo(String.format("Could not find previous head of repository located at %s. Its your first commit?", file.getAbsolutePath()));
         }
     }
-
-
 }
